# ape2d

./: .gitignore  CONVENTIONS.md  HACKING.md  LICENSE.txt  Makefile  README.md  analysis.txt  compile-profiles.sh  compile.sh  gmon.out  index.md  makefile  meson.build  multiple_sprites
examples/: exclusive.cpp  input_example.cpp  iteration.cpp  layers.cpp  meson.build  moving_sprite.cpp  multiple_sprites.cpp  multiple_views.cpp  platformer.cpp  scene_example.cpp  (+7 more)
src/: ape.cpp  find_sources.sh  meson.build
src/ape/: ape.cpp
src/ape/core/: common.cpp  constants.cpp  defines.cpp  node.cpp  scene.cpp  transform.cpp  world.cpp
src/ape/core/detail/: rect_detail.cpp  world_detail.cpp
src/ape/detail/: ape_detail.cpp
src/ape/file/: persistent.cpp
src/ape/graphics/: batch_renderer.cpp  buffer.cpp  color.cpp  graphics.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  sprite.cpp  sprite_batcher.cpp  static.cpp  texture.cpp  texture_store.cpp  vertex_attributes.cpp  window.cpp
src/ape/graphics/detail/: graphics_detail.cpp  texture_store_detail.cpp  window_detail.cpp
src/ape/input/: context.cpp  context_manager.cpp  input_config.cpp  input_info.cpp  input_system.cpp
src/ape/input/detail/: context_detail.cpp  input_detail.cpp
src/ape/scene/: camera.cpp  node.cpp  scene.cpp
src/ape/scene/detail/: scene_detail.cpp
src/ape/utils/: frame_counter.cpp  framecounter.cpp
src/detail/: ape_detail.cpp
tests/: meson.build  mousetest.cpp  primitivetest.cpp  sprite.cpp  window.cpp
tests/core/: vec.cpp
tests/ecs/: entity_deletion.cpp  entity_tagging.cpp
(+82 files in other folders)
